Fixes #1031 handles internal class no longer accessible for Java >= 16 with clear instruction for the two options to resolve the problem (1) add the JVM flags to allow runtime access or (2) add the BouncyCastle dependencies to the classpath